--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
     "connectorx>=0.4.2",
+    "openai>=1.72.0",
     "pandas>=2.2.3",
     "pillow>=11.2.0",
     "polars>=1.26.0",
     "pyarrow>=19.0.1",
+    "pydantic>=2.11.3",
     "sqlalchemy>=2.0.40",
 ]
