--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "polars>=1.26.0",
     "pyarrow>=19.0.1",
     "pydantic>=2.11.3",
-    "sqlalchemy>=2.0.40",
+    "sqlmodel>=0.0.24",
 ]
 
 [dependency-groups]
