--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
     "connectorx>=0.4.2",
+    "gradio-client>=1.8.0",
     "loguru>=0.7.3",
     "openai>=1.72.0",
     "pandas>=2.2.3",
