--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "connectorx>=0.4.2",
     "gradio-client>=1.8.0",
+    "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.6",
     "loguru>=0.7.3",
     "openai>=1.72.0",
     "pandas>=2.2.3",
