--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,27 @@ dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.6",
     "loguru>=0.7.3",
+    "matplotlib>=3.10.1",
     "openai>=1.72.0",
+    "opencv-python>=4.11.0.86",
     "pandas>=2.2.3",
     "pillow>=11.2.0",
     "polars>=1.26.0",
     "pyarrow>=19.0.1",
+    "pycocotools>=2.0.8",
     "pydantic>=2.11.3",
     "sqlmodel>=0.0.24",
     "tenacity>=9.1.2",
+    "torch>=2.6.0",
+    "torchvision>=0.21.0",
 ]
 
 [dependency-groups]
 dev = [
     "ruff>=0.11.4",
 ]
+
+[[tool.uv.index]]
+name = "pytorch-cu"
+url = "https://download.pytorch.org/whl/cu126"
+explicit = true
