--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
     "connectorx>=0.4.2",
+    "detectron2",
     "gradio-client>=1.8.0",
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.6",
@@ -35,3 +36,6 @@ dev = [
 name = "pytorch-cu"
 url = "https://download.pytorch.org/whl/cu126"
 explicit = true
+
+[tool.uv.sources]
+detectron2 = { git = "ssh://git@github.com/facebookresearch/detectron2.git" }
